# perfil-municipios

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  etl_pipeline.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: ci.yml
db/schema/: 01_ddl_postgresql.sql  02_sqlalchemy_models.py
dbt/: dbt_project.yml
dbt/models/: schema.yml
docs/adrs/: adr-001-postgresql.md  adr-002-fastapi.md  adr-003-star-schema.md  adr-004-notion.md
scripts/: seed_initial_data.py  setup_github_labels.sh
src/api/: main.py
src/api/core/: config.py  database.py
src/etl/: base.py
src/etl/extractors/: ibge_localidades.py
src/etl/utils/: notifications.py
tests/: conftest.py
tests/api/: test_health.py
tests/etl/: test_ibge_localidades.py
